--- a/nerdsmain.html
+++ b/nerdsmain.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<header>
-		<div class="logo"><img src="" alt=""></div>
+		<img src="" alt="logo">
 		<nav class="main-menu">
 			<ul>
 				<li><a href="">Студия</a></li>
@@ -15,21 +15,19 @@
 				<li><a href="">Магазин</a></li>
 				<li><a href="">Контакты</a></li>
 			</ul>
-		</nav>
-		<div>
 			<img src="">
 			<p>Корзина</p>
-		</div>
+		</nav>
 	</header>
 	<main>
 		<div>
-			<p>Магазин готовых шаблонов</p>
+			<h1>Магазин готовых шаблонов</h1>
 		</div>
 		<section>
 			<div>
 				<form oninput="costoutput.value=costinput.value">
 					<p><b>Стоимость</b></p>
-					<p>0<input type="range" id="costinput" name="costinput" main="0" max="15000">15000</p>
+					<p>0<input type="range" id="costinput" name="costinput" main="0" max="15000" checked>15000</p>
 					<p><output id="costoutput" name="costoutput"></p>
 					<p><b>Сетка</b></p>
 					<p><input type="radio" name="answer" value="a1" checked>Адаптивная<Br>
@@ -41,13 +39,13 @@
 				    <input type="checkbox" name="option3" value="a3">Новости<Br> 
 				    <input type="checkbox" name="option4" value="a4">Галерея<Br> 
 				    <input type="checkbox" name="option5" value="a5">Корзина</p>
-				    <p><input type="submit">Показать</p>
+				    <p><input type="submit" value="Показать" title="Показать"></p>
 				</form>
 			</div>	
 			<div>
 				<table>
 					<tr>
-						<td><img src=""></td>
+						<td><img src="" ></td>
 						<td><img src=""></td>
 					</tr>
 					<tr>
@@ -69,6 +67,13 @@
 		</section>
 	</main>
 	<footer>
-		
+		<div>
+			<ul class="social-networks">
+				<li><a href=""><img src="img/vk.svg" alt="" title="ВКонтакте"></a></li>
+				<li><a href=""><img src="img/facebook.svg" alt="" title="Facebook"></a></li>
+				<li><a href=""><img src="img/instagram.svg" alt="" title="Instagram"></a></li>
+			</ul>
+			<p></p>
+		</div>	
 	</footer>
 </body>
