--- a/nerdssubmain.html
+++ b/nerdssubmain.html
@@ -1,1 +1,84 @@
 {\rtf1}
+<HEAD>
+<body>
+	<header>
+		<nav>
+			<img src="logo.png">
+			<ul>
+				<li>Студия</li>
+				<li>Клиенты</li>
+				<li>Магазин</li>
+				<li>Контакты</li>
+			</ul>
+			<img src="trash">
+			<p>Корзина</p>
+		</nav>	
+	</header>
+	<main>
+		<section>
+			<h1>Долго, дорого, скрупулезно</h1>
+			<p>Математически выверенный дизайн для вашего сайта или мобильного приложения</p>
+			<a href="">Узнать больше</a>
+		</section>
+		<section>
+			<div>
+				<h4>Веб-сайты</h4>
+				<p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
+				<a href="">Заказать</a>
+			</div>
+			<div>
+				<h4>Приложения</h4>
+				<p>Покорите топ-10 приложений в AppStore и Google</p>
+				<a href="">Заказать</a>
+			</div>
+			<div>
+				<h4>Презентации</h4>
+				<p>Вы даже не подозреваете, насколько вы изумительны!</p>
+				<a href="">Заказать</a>
+			</div>	
+		</section>
+		<section>
+			<div>
+				<h2>Мы маленькая, но гордая дизайн-студия из Краснодара.</h2>
+				<h5>Выполняем заказы на разработку</h5>
+				<ul>
+					<li>Веб-сайтов любой сложности</li>
+					<li>Мобильных приложений для IOS и Android</li>
+					<li>Слайдшоу и видео для корпоративных презентаций</li>
+				</ul>
+			</div>
+			<div>
+				<img src="">
+				<h5>С 2004 года любим точность во всем:</h5>
+				<dl>
+					<dt>146%</dt>
+					<dd>Уровень самоотдачи</dd>
+					<dt>100%</dt>
+					<dd>Соблюдение сроков</dd>
+					<dt>50%</dt>
+					<dd>Минимальная предоплата</dd>
+				</dl>
+			</div>	
+		</section>
+		<section>
+			<ul>
+				<li><img src=""></li>
+				<li><img src=""></li>
+				<li><img src=""></li>
+				<li><img src=""></li>
+			</ul>
+		</section>
+		<!-- <section>
+			Блок под геолокацию
+		</section> -->
+	</main>
+	<footer>
+		<span>
+			<ul class="social-networks">
+				<li><a href=""><img src="img/vk.svg" alt="" title="ВКонтакте"></a></li>
+				<li><a href=""><img src="img/facebook.svg" alt="" title="Facebook"></a></li>
+				<li><a href=""><img src="img/instagram.svg" alt="" title="Instagram"></a></li>
+			</ul>
+		</span>
+	</footer>	
+</body>
