--- a/nerdssubmain.html
+++ b/nerdssubmain.html
@@ -40,6 +40,7 @@
 		<section>
 			<div>
 				<h2>Мы маленькая, но гордая дизайн-студия из Краснодара.</h2>
+				<p>Исповедуем принципы минимализма и чистоты. Ставим математический расчёт превыше креатива. Работаем не покладая рук, как роботы.</p>
 				<h5>Выполняем заказы на разработку</h5>
 				<ul>
 					<li>Веб-сайтов любой сложности</li>
