--- a/nerdssubmain.html
+++ b/nerdssubmain.html
@@ -49,7 +49,7 @@
 				</ul>
 			</div>
 			<div>
-				<img src="">
+				<img src="" alt="">
 				<h5>С 2004 года любим точность во всем:</h5>
 				<dl>
 					<dt>146%</dt>
@@ -63,10 +63,10 @@
 		</section>
 		<section>
 			<ul>
-				<li><img src=""></li>
-				<li><img src=""></li>
-				<li><img src=""></li>
-				<li><img src=""></li>
+				<li><img src="" alt=""></li>
+				<li><img src="" alt=""></li>
+				<li><img src="" alt=""></li>
+				<li><img src="" alt=""></li>
 			</ul>
 		</section>
 		<!-- <section>
