--- a/nerdssubmain.html
+++ b/nerdssubmain.html
@@ -80,6 +80,8 @@
 				<li><a href=""><img src="img/facebook.svg" alt="" title="Facebook"></a></li>
 				<li><a href=""><img src="img/instagram.svg" alt="" title="Instagram"></a></li>
 			</ul>
+			<h3>Давайте дружить, это выгодно!</h3>
+			<p>Скидка 10% для друзей из социальных сетей</p>
 		</span>
 	</footer>	
 </body>
